# pre-commit

./: .pre-commit-hooks.yaml  LICENSE  setup.cfg
pre_commit_hooks/: conventional_commits.py  saludo.py
