[metadata]
name = pre_commit_hooks
version = 0.0.1
description = Some pre-commits funtions for DS
long_description = file: README.md
url = https://github.com/dlopezco/pre-commit/
author = Diego Lopez
author_email = diegoethi12@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.7

[options.entry_points]
console_scripts =
    check-saludo = pre_commit_hooks.saludo:main
    conventional-commits = pre_commit_hooks.conventional_commits:main