[metadata]
name = pre_commit_hooks
version = 0.0.7
description = Some pre-commits funtions for DS
long_description = file: README.md
url = https://github.com/dlopezco/pre-commit/
download_url = https://github.com/dlopezco/pre-commit/archive/v0.0.7.tar.gz
author = Diego Lopez
author_email = diegoethi12@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    flake8
    toml
    six
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    check-saludo = pre_commit_hooks.saludo:main
    conventional-commits = pre_commit_hooks.conventional_commits:main